[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "iwfm-pywfm"
authors = [{name = "Tyler Hatch", email = "hatch.tyler@gmail.com"}]
description = "python library to interact with Integrated Water Flow Model (IWFM) applications"
readme = "README.md"
dynamic = ["version"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11"
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "Click",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-xdist",
]

[project.urls]
Documentation = "https://sgmomodeling.github.io/PyWFM"
Repository = "https://github.com/SGMOModeling/PyWFM"
Issues = "https://github.com/SGMOModeling/PyWFM/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"
markers = [
    "unit: tests that don't need a DLL or model fixture",
    "integration: requires the SampleModel and a loaded DLL",
    "regression: pinned golden values (subset of integration)",
    "simulation: runs an IWFM simulation; slower than inquiry-only tests",
    "slow: requires C2VSimCG; skipped by default unless --runslow is passed",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pywfm.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pywfm = "pywfm.cli:cli"