[metadata]
name = pywfm
version = 0.2.0
author = Tyler Hatch
author_email = tyler.hatch@water.ca.gov
description = python library to interact with IWFM models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SGMOModeling/PyWFM
project_urls =
    Bug Tracker = https://github.com/SGMOModelingPyWFM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    pandas

[options.packages.find]
where = src